<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pg2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:weightSum="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/add_img"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
     <!--   <ImageView
            android:id="@+id/im_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/add_img"
            android:layout_weight=".2"/>-->

        <EditText
            android:id="@+id/et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:inputType="text"
            android:layout_weight=".1"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_weight=".1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_weight=".1"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_confirmPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:layout_weight=".1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight=".1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/im_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/check"
                android:scaleType="centerInside"
                android:backgroundTint="@color/white"
                android:textSize="12dp"
                android:src="@drawable/checkbox_background" />

            <!-- <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/check"
                 android:textColor="@color/white"
                 android:textSize="12dp" />-->
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_weight=".1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/button_solid"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>