<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pg3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight=".35"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:src="@drawable/dummy"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
            <EditText
                android:id="@+id/et_uname"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:drawableLeft="@drawable/edit_profile"
                android:drawablePadding="30dp"
                android:hint="@string/username"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
                <View
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_pswd"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="35dp"
                        android:layout_weight=".98"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="30dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <ImageView
                        android:id="@+id/eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/eye" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/im_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:scaleType="centerInside"
                    android:src="@drawable/checkbox_background"
                    android:text="@string/reminder" />


                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="@string/forgot"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/button_solid"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_acc"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>